# PySIP

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
PySIP/: __init__.py  call.py  client.py  exceptions.py  sip_account.py  types.py
PySIP/_internal/: __init__.py  buffers.py  metrics.py
PySIP/features/: __init__.py
PySIP/features/amd/: __init__.py  config.py  detector.py
PySIP/features/dtmf/: __init__.py  detector.py  generator.py
PySIP/features/recording/: __init__.py  recorder.py
PySIP/features/tts/: __init__.py  edge.py  engine.py
PySIP/media/: __init__.py  jitter.py  player.py  stream.py
PySIP/media/codecs/: __init__.py  base.py  pcma.py  pcmu.py
PySIP/protocol/: __init__.py
PySIP/protocol/rtp/: __init__.py  dtmf.py  packet.py  rtcp.py
PySIP/protocol/sdp/: __init__.py  builder.py  parser.py
PySIP/protocol/sip/: __init__.py  auth.py  builder.py  message.py  parser.py
PySIP/session/: __init__.py  dialog.py  manager.py  transaction.py
PySIP/transport/: __init__.py  base.py  rtp.py  udp.py
examples/: README.md  advanced_call.py  amd_detection.py  basic_call.py  feature_demo.py  gather_pin.py  ivr_menu.py  record_call.py
tests/: __init__.py  test_codecs.py  test_jitter_buffer.py  test_protocol_rtcp.py  test_protocol_rtp.py  test_protocol_sdp.py  test_protocol_sip.py  test_transport.py  test_types.py
tests/perf/: README.md  extensions.csv.example  load_test.py
